# CertRLanon

./: .gitignore  .travis.yml  CertRL.opam  Dockerfile  Makefile  Makefile.coq_modules  README.md  _CoqProject
docs/: CertRL.AxiomaticNormedRealVectorSpace.html  CertRL.BorelSigmaAlgebra.html  CertRL.Gaussian.html  CertRL.Gen_NN.html  CertRL.ProbSpace.html  CertRL.SigmaAlgebras.html  CertRL.converge.LM.R_compl.html  CertRL.converge.LM.check_sub_structure.html  CertRL.converge.LM.compatible.html  CertRL.converge.LM.continuous_linear_map.html  CertRL.converge.LM.fixed_point.html  CertRL.converge.LM.hierarchyD.html  CertRL.converge.LM.hilbert.html  CertRL.converge.LM.linear_map.html  CertRL.converge.LM.logic_tricks.html  CertRL.converge.cond_expt.html  CertRL.converge.finite_time.html  CertRL.converge.mdp.html  CertRL.converge.mdp_turtle.html  CertRL.converge.pmf_monad.html  CertRL.derivlemmas.html  CertRL.lib_utils.LibUtils.html  CertRL.lib_utils.LibUtilsAssoc.html  CertRL.lib_utils.LibUtilsBag.html  CertRL.lib_utils.LibUtilsBindings.html  CertRL.lib_utils.LibUtilsBindingsNat.html  CertRL.lib_utils.LibUtilsClosure.html  CertRL.lib_utils.LibUtilsCompat.html  CertRL.lib_utils.LibUtilsCoqLibAdd.html  CertRL.lib_utils.LibUtilsDigits.html  CertRL.lib_utils.LibUtilsFresh.html  CertRL.lib_utils.LibUtilsGroupByDomain.html  CertRL.lib_utils.LibUtilsInterleaved.html  CertRL.lib_utils.LibUtilsLattice.html  CertRL.lib_utils.LibUtilsLift.html  CertRL.lib_utils.LibUtilsLiftIterators.html  CertRL.lib_utils.LibUtilsListAdd.html  CertRL.lib_utils.LibUtilsResult.html  (+28 more)
